# simeis-jla

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  control  docker-compose.yml
.github/: CODEOWNERS  Dockerfile
.github/ISSUE_TEMPLATE/: custom.md  feature_request.md
.github/workflows/: advancedTesting.yml  autoCreateBranch.yml  build.yml  buildProject.yml  cargoTarpaulin.yml  checkCompile.yml  cmake-multi-platform.yml  createRelease.yml  heavyTesting.yml  lightTesting.yml  updateDeps.yml
debian/: postinst  simeis-server-jla.1  simeis-server-jla.service
example/: client.py
example/core/: client.py
example/tests/: propertybased.py  run-all-tests.py  utils.py
python/: .env.example  client.py  game.py  game_threads.py  player.py  server.py  utils.py
python/classes/: game.py  player.py
python/core/: client.py  utils.py
simeis-server/: Cargo.toml
simeis-server/src/: main.rs
tests/: propertybased.py  run-all-tests.py  scenario-1.py  scenario-2.py  scenario-3.py  utils.py
